<resources>
    <string name="app_name">Laperin</string>
    <string name="masuk">Masuk</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="Masukkan_password">Masukkan Password</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_sandi">Lupa kata sandi?</string>
    <string name="password_minimum_character">Password minimal 6 karakter</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="error_email">Email Error</string>
    <string name="password">Password</string>
    <string name="lewati">Lewati</string>
    <string name="start">Mulai</string>
    <string name="nama_lengkap"> Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="masukkan_ulang_password">Masukkan Ulang Password</string>
    <string name="masukkan_alamat_lengkap">Masukkan Alamat Lengkap</string>
    <string name="ttl">TTL</string>
    <string name="input_invalid">Input Invalid</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Keluar</string>
    <string name="profil">Profil</string>
    <string name="alamat">Alamat</string>
    <string name="title_koleksi">Koleksi resep</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="koleksi_kosong">Anda belum menambahkan koleksi</string>
    <string name="badge">Pro</string>
    <string name="alamat_kosong">Belum diatur</string>
    <string name="title_informasi_pengguna">Informasi pengguna</string>
    <string name="email">Email</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="telp_number">No. Telepon</string>
    <string name="preferensi">Preferensi</string>
    <string name="tema_gelap">Tema Gelap</string>
    <string name="simpan">Simpan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="durasi">durasi</string>
    <string name="tanyain">Tanya.in</string>
    <string name="masakin">Masak.in</string>
    <string name="donasiin">Donasi.in</string>
    <string name="cariin">Cari.in</string>
    <string name="resep_rekomendasi">Resep rekomendasi</string>
    <string name="cari_resep">Cari Resep</string>
    <string name="resep_populer">Resep populer</string>
    <string name="hello">Hello,</string>
    <string name="estimasi_jam_menit">Estimasi %1$d jam %2$d menit</string>
    <string name="estimasi_menit">Estimasi %1$d menit</string>
    <string name="format_waktu_tidak_valid">Format waktu tidak valid</string>
    <string name="bahan_bahan">Bahan - bahan</string>
    <string name="video_tutorial">Video tutorial</string>
    <string name="tahapan">Tahapan</string>
    <string name="konfirm_login">Sudah punya akun?</string>
    <string name="konfirm_regis">Belum punya akun?</string>
    <string name="scan_bahan">Scan Bahan</string>
    <string name="terdeteksi">Terdeteksi</string>
    <string name="result_kosong">Anda belum menambahkan item</string>
    <string name="terdekat">Terdekat</string>
    <string name="donasi_saya">Donasi Saya</string>
    <string name="buat_donasi">Buat Donasi</string>
    <string name="judul">Judul</string>
    <string name="jumlah">Jumlah :</string>
    <string name="jenis_bahan_makanan">Jenis bahan/makanan</string>
    <string name="unggah">Unggah</string>
    <string name="tambahkan_foto">Tambahkan foto</string>
    <string name="donasi">Donasi</string>
    <string name="scan">Scan</string>
    <string name="koleksi">Koleksi</string>
    <string name="sedang_berlangsung">Sedang berlangsung</string>
    <string name="sudah_selesai">Sudah selesai</string>
    <string name="sudah_diambil">Sudah diambil</string>
    <string name="jenis">Jenis</string>
    <string name="belum_diambil">Belum diambil</string>
    <string name="selesai_diambil">Selesai diambil</string>
    <string name="hint_lokasi">Lokasi donasi diatur menyesuaikan lokasi anda saat ini</string>
    <string name="masukkan_username">Masukkan username</string>
    <string name="nama_kosong">Belum diatur</string>
    <string name="telephone_kosong">Belum diatur</string>
    <string name="estimasi_jam">%d jam</string>
    <string name="estimasi_menit_2">%d menit</string>
    <string name="empty_koleksi">Anda belum menambahkan koleksi</string>
    <string name="cari_bahan">Cari Bahan</string>
    <string name="empty_uncompleted">Anda belum menambahkan donasi.</string>
    <string name="empty_completed">Anda belum menyelesaikan donasi.</string>
    <string name="empty_donasi">Tidak ada donasi disekitar anda</string>
    <string name="title_detail_donasi">Detail Donasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="tanggal">Tanggal :</string>
    <string name="pengirim">Pengirim</string>

    <string-array name="category_name">
        <item>All</item>
        <item>Manis</item>
        <item>Pedas</item>
        <item>Kuah</item>
        <item>Gurih</item>
        <item>Gurih</item>
        <item>Gurih</item>
        <item>Gurih</item>
    </string-array>

    <integer-array name="category_icon">
        <item>@drawable/ic_rice_bowl_24</item>
        <item>@drawable/ic_rice_bowl_24</item>
        <item>@drawable/ic_rice_bowl_24</item>
        <item>@drawable/ic_rice_bowl_24</item>
        <item>@drawable/ic_rice_bowl_24</item>
    </integer-array>

</resources>