<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tvDaftar"
        style="@style/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/daftar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/edUsername"
        style="@style/medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="13sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDaftar"
        app:layout_constraintTop_toBottomOf="@+id/tvDaftar" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/edEmailRegister"
        style="@style/medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/masukkan_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUsername" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/edPassword_register"
        style="@style/medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/Masukkan_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/edEmailRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/edEmailRegister" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/edUlang_password"
        style="@style/medium"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/masukkan_ulang_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/edPassword_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edPassword_register"
        app:layout_constraintTop_toBottomOf="@+id/edPassword_register" />

    <com.capstone.laperinapp.ui.customView.ButtonRegister
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@color/primary"
        android:enabled="false"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_masuk_register"
        app:layout_constraintEnd_toEndOf="@+id/edUlang_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edUlang_password" />

    <com.capstone.laperinapp.ui.customView.ButtonActivity
        android:id="@+id/bt_masuk_register"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:text="@string/masuk"
        android:textColor="@color/primary"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btRegister"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>