<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/orange"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <ImageView
            android:id="@+id/img_item"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item"
            app:layout_constraintTop_toTopOf="@+id/img_item">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/nama_makanan"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_jumlah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/jumlah"
                app:layout_constraintBottom_toTopOf="@+id/tv_item_jenis"
                app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_item_jenis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/jenis"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_item_jumlah"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_solid_yellow"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="4dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginVertical="4dp"
                    android:src="@drawable/ic_time_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/belum_diambil"
                    android:textColor="@color/yellow" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_selesai_diambil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/selesai_diambil"
            android:layout_marginTop="24dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>