<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.donasi.add.AddDonasiActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            app:titleTextAppearance="@style/bold.black"
            app:titleTextColor="@color/black"/>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_jumlah"
        app:layout_constraintStart_toStartOf="@+id/ed_jumlah"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <View
            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            style="@style/editText"
            app:layout_constraintEnd_toEndOf="@+id/ed_jumlah"
            app:layout_constraintStart_toStartOf="@+id/ed_jumlah"
            app:layout_constraintTop_toBottomOf="@+id/ed_jumlah" />

        <LinearLayout
            android:id="@+id/ll_input_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/foto_donasi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                style="@style/imageTint"
                android:src="@drawable/ic_image_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tambahkan_foto"
                style="@style/imageTint"
                android:textSize="11sp" />

        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/ed_jumlah"
        app:layout_constraintStart_toStartOf="@+id/ed_jumlah"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <ImageView
        android:id="@+id/btn_remove_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete_24"
        android:layout_margin="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/img_preview"
        app:layout_constraintTop_toTopOf="@+id/img_preview" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/ed_nama"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/judul"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/ed_description"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:hint="@string/deskripsi"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="13sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_nama"
        app:layout_constraintStart_toStartOf="@+id/ed_nama"
        app:layout_constraintTop_toBottomOf="@+id/ed_nama" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/ed_jumlah"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:hint="@string/jumlah"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_nama"
        app:layout_constraintStart_toStartOf="@+id/ed_nama"
        app:layout_constraintTop_toBottomOf="@+id/ed_description" />

    <com.capstone.laperinapp.ui.customView.EditText
        android:id="@+id/ed_jenis"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:hint="@string/jenis_bahan_makanan"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_nama"
        app:layout_constraintStart_toStartOf="@+id/ed_nama"
        app:layout_constraintTop_toBottomOf="@+id/ed_jumlah" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/ed_jenis"
        app:layout_constraintTop_toBottomOf="@+id/ed_jenis">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            style="@style/imageTint"
            android:text="@string/hint_lokasi"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_donasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/unggah"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_donasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_jenis" />

</androidx.constraintlayout.widget.ConstraintLayout>